# rust-api-crud

./: .env.example  .gitignore  ACCOMPLISHMENTS.md  Cargo.toml  README.md  SETUP_CHECKLIST.md  START_HERE.md  docker-compose.yml  task.md
docs/: LEARNING_PATH.md  PROJECT_SUMMARY.md  QUICK_START.md  RUST_CONCEPTS.md  TDD_GUIDE.md  TYPESCRIPT_TO_RUST.md
migrations/: 0001_create_users_table.sql  0002_create_users_table.sql  001_create_users_table.sql
src/: lib.rs  main.rs
src/db/: mod.rs
src/handlers/: mod.rs  user_handlers.rs
src/models/: mod.rs  user.rs
tests/: calculator_tests.rs  db_tests.rs  user_tests.rs
